gap error repair

--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -77,7 +77,6 @@
   padding-block: 3.5rem 5rem;
   &__wrapper {
     gap: 2rem;
-    row-gap: auto;
   }
   &__logo {
     max-width: fit-content;
